--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -1,3 +1,8 @@
+* {
+    font-family: 'Red Hat Display', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap');
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -20,14 +25,16 @@
 }
 
 .plan {
-    background-color: whitesmoke;
+    background-color: hsl(225, 100%, 98%);
     width: 320px;
     height: 80px;
     border-radius: 10px;
 }
 
 .price {
-    color: rgb(44, 44, 133);
+    font-size: 16px;
+    font-weight: 700;
+    color: hsl(223, 47%, 23%);
     margin: 5px;
     position: relative;
     right: 15px;
@@ -35,10 +42,11 @@
 }
 
 .price-p {
-    color: rgb(87, 87, 90);
+    font-size: 16px;
+    color: hsl(224, 23%, 55%);
     margin: 5px;
     position: relative;
-    right: 15px;
+    right: 18px;
     top: -45px;
 }
 
@@ -51,13 +59,14 @@
 }
 
 .top {
-    color: rgb(114, 114, 114);
+    font-size: 16px;
+    color: hsl(224, 23%, 55%);
 }
 
 h2 {
     font-size: 2000;
     font-weight: 900;
-    color: rgba(6, 6, 77, 0.822);
+    color: hsl(223, 47%, 23%);
 }
 
 .center_image {
@@ -85,7 +94,7 @@ body {
 .payment {
     cursor: pointer;
     position: relative;
-    box-shadow: 2px 8px #e9e8e8;
+    box-shadow: 2px 8px hsl(225, 100%, 98%);
     top: 0px;
     background-color: darkblue;
     margin: 20px;
@@ -95,6 +104,7 @@ body {
 }
 
 .payment-text {
+    font-size: 16px;
     position: inherit;
     font-weight: bold;
     color: white;
@@ -102,9 +112,10 @@ body {
 }
 
 .cancel {
+    font-size: 16px;
     font-weight: 550;
     cursor: pointer;
-    color: rgb(19, 74, 255);
+    color: hsl(224, 23%, 55%)
 }
 
 @media only screen and (max-width: 600px) {
